<resources>
    <string name="app_name">TrackerDesign</string>
    <string name="blank_text"></string>
    <string name="example_date">06-Aug-2016</string>
    <string name="main_activity_leftButton">&lt;</string>
    <string name="main_activity_rightButton">&gt;</string>
    <string name="add_activity_button">Add Activity!</string>
    <string name="add_activity_name">Activity Name:</string>
    <string name="add_activity_type">Activity Type:</string>
    <string name="add_activity_notes">Notes:</string>
    <string name="add_activity_templateButton">From Template</string>
    <string name="tracker_activity_name">Name</string>
    <string name="tracker_activity_start">Time Started:</string>
    <string name="tracker_activity_end">Time Ended:</string>
    <string name="tracker_activity_duration">Duration:</string>
    <string name="tracker_activity_editButton">Edit Activity</string>
    <string name="tracker_activity_endButton">End Activity</string>
    <string name="education_button">Education</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_add_todo">Add To-do</string>
    <string name="add_todo">To Do:</string>
    <string name="add_todo_button">Add Todo!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_todo_type">To Do Type:</string>
    <string name="add_todo_est">Estimated Time:</string>
    <string name="todo_mins">mins.</string>
</resources>
