<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/trackerActivityActivityTypeImageView"
        android:layout_gravity="left|top"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tracker_activity_name"
        android:id="@+id/trackerActivityNameTextView"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/trackerActivityActivityTypeImageView" />

    <Button
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/tracker_activity_endButton"
        android:id="@+id/endActivityButton"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/trackerActivityNameTextView"
        android:layout_alignParentEnd="true" />

    <View style="@style/Divider"
        android:layout_below="@id/trackerActivityActivityTypeImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tracker_activity_start"
        android:id="@+id/textView4"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/trackerActivityActivityTypeImageView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/blank_text"
        android:id="@+id/trackerActivityEndTextView"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:id="@+id/trackerActivityStartValueTextView"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/trackerActivityActivityTypeImageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/blank_text"
        android:id="@+id/trackerActivityEndValueTextView"
        android:layout_alignTop="@+id/trackerActivityEndTextView"
        android:layout_alignStart="@+id/trackerActivityStartValueTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tracker_activity_duration"
        android:id="@+id/trackerActivityDurationTextView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="10dp"
        android:text="@string/blank_text"
        android:id="@+id/trackerActivityDurationValueTextView"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/trackerActivityDurationTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tracker_activity_editButton"
        android:id="@+id/trackerActivityEditButton"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onEditActivityClick"
        style="@style/MyButton" />

</RelativeLayout>
