<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/dateTab">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_leftButton"
            android:id="@+id/yesterdayButton"
            android:layout_weight="2"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dateTextView"
            android:text="@string/example_date"
            android:layout_weight="4"
            android:gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_rightButton"
            android:id="@+id/tomorrowButton"
            android:layout_weight="2"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

    <View style="@style/Divider"
        android:id="@+id/divider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/dateTab"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_centerHorizontal="true" />

</RelativeLayout>