<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ebk.trackerDesign.AddFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_todo"
        android:id="@+id/todoTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="20"
        android:id="@+id/todoEditText"
        android:layout_below="@+id/todoTextView"
        android:layout_alignParentStart="true" />

    <View style="@style/Divider"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/todoEditText"
        android:id="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_todo_type"
        android:id="@+id/textView2"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/blank_text"
        android:id="@+id/activityTypeTextView"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/todoTextView" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/todoTypeRadioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/education_RadioButton"
            android:button="@null"
            android:background="@drawable/education_radio_button"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/entertainment_RadioButton"
            android:layout_marginLeft="10dp"
            android:button="@null"
            android:background="@drawable/entertainment_radio_button"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/sports_RadioButton"
            android:layout_marginLeft="10dp"
            android:button="@null"
            android:background="@drawable/sports_radio_button" />

    </RadioGroup>

    <View style="@style/Divider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/todoTypeRadioGroup"
        android:id="@+id/view2" />

    <include layout="@layout/inc_dec_buttons"></include>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_todo_button"
        android:id="@+id/addTodoButton"
        android:layout_below="@+id/estTimeLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        style="@style/MyButton"/>

</RelativeLayout>
